<resources>
    <string name="app_name">"Project1 Final "</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="InputEmail"><![CDATA[<Enter-Email>]]></string>
    <string name="inputPassword"><![CDATA[<Input-Password>]]></string>
    <string name="andG">andG</string>
    <string name="forgot">Forgot</string>
    <string name="recentReport">Recent Report</string>
    <string name="resent">Send</string>
    <string name="here">here</string>
    <string name="shareSomething">Share Some Thing...</string>
    <string name="Sharing">Sharing off</string>
    <string name="Points">Points</string>
    <string name="pointTotalYou">Your Total Points</string>
    <string name="point">10987</string>
    <string name="BuysPoint">Buys Points</string>
    <string name="auction">Auction</string>
    <string name="auction1">Get noticed by millions! Enter you bid to be display on stop of the auction wall</string>
    <string name="whoChecked">Who checked me out ?</string>
    <string name="whoChecked2">Curious to see who viewed you profile ? Unlock to find you</string>
    <string name="winkBoom">Wink Boom</string>
    <string name="sendAMessages">Send a messages to hunders of people at once with a Wink Boom</string>
    <string name="whoFariusme">Who Favorited  Me</string>
    <string name="whoFariusme2">Find out who likes chatting to you and add you as Favorited Me</string>
    <string name="sendGift">Send Gift</string>
    <string name="sendGift2">Send vitrual gift as ice breaker , for the holiday , and for</string>
    <string name="noOs">0 s</string>
    <string name="three">3</string>
    <string name="searchFriends">Search Friends</string>
    <string name="checkTimeLine">Check the timeline</string>
    <string name="shakeToChat">Shake To Chat</string>
    <string name="q">q</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="chatAndNotifice">Chat and notification Settings :</string>
    <string name="sound">Sound On</string>
    <string name="vibration">Vibration On</string>
    <string name="notification">Notifications On</string>
    <string name="account">Accounts</string>
    <string name="miles">Miles</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="distance">Distance in</string>
    <string name="changePassword">Change Password</string>
    <string name="blockedUsers">Blocked Users</string>
    <string name="deActivateAccount">Deactivate Account</string>
    <string name="rateAndg">Rate andG</string>
    <string name="privacyPolici">Privacy Policy</string>
    <string name="terms_of_users">Terms Of Users</string>
    <string name="versions">Versions 1.0.0.0b r5482 20140425_16:19</string>
    <string name="save">Save</string>
    <string name="updateToMyBuzz">Update To My Buzz</string>
    <string name="andGAlrets">andG Alerts</string>
    <string name="chatMessages">Chat Messages</string>
    <string name="all">All</string>
    <string name="SomeOneChecksmeout">Someone Checks Me outs</string>
    <string name="myFriends">My Friends</string>
    <string name="chats">Chats</string>
    <string name="notifications">Notifications</string>
    <string name="freePage">free Page</string>
    <string name="javaScripInterfacr">JavaScrip Interface</string>
    <string name="chinaLanguage">野生越南</string>
    <string name="fivethree">53</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="comfirmPassword">Confirm Password</string>
    <string name="dontActive">Dont deactivate ,I want andG</string>
    <string name="activate">Deactivate</string>
    <string name="remove">if you want to remove the andG application but would like to continues using andG thround http://and-g.infor plees do not deactivate yours account</string>
    <string name="kilomet">Kilomets</string>
    <string name="cancel">Cancel</string>
    <string name="searchSetting">Search Settings</string>
    <string name="search">Search</string>
    <string name="showMe">Show me...</string>
    <string name="interreadin">interested in...</string>
    <string name="near">Near</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="county">County</string>
    <string name="word">World</string>
    <string name="offage">Off Age between</string>
    <string name="off_ethnicity">off ethinicity</string>
    <string name="done">Done</string>
    <string name="searchEthnicity">Search Ethnicity</string>
    <string name="latina">Latina/Latino</string>
    <string name="black">Black/African</string>
    <string name="natives">Native/Aboriginal</string>
    <string name="asian">Asian</string>
    <string name="indian">East Indian</string>
    <string name="pacific">Pacific Islander</string>
    <string name="whiles">While Caucasion</string>
    <string name="middke">Middke Easten</string>
    <string name="mixed">Mixed/Mutil</string>
    <string name="ok">Ok</string>
    <string name="editProfile">Edit Profile</string>
    <string name="theBasic">The Basic</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="intereadtd">Interested</string>
    <string name="lookingFor">Looking For</string>
    <string name="aboutMe">About Me</string>
    <string name="extended">Extended infor</string>
    <string name="relationship">Relationsip status</string>
    <string name="bodyType">Body Type</string>
    <string name="height">Height</string>
    <string name="ethnicity">Ethncity</string>
    <string name="ht">24</string>
    <string name="Hanoi">Hanoi-VietNam</string>
    <string name="askMe">AskMe</string>
    <string name="singger">Singer</string>
    <string name="inARelationship">In a Relationship</string>
    <string name="maried">Maried</string>
    <string name="compalicates">It compalicates</string>
    <string name="separated">Separated</string>
    <string name="divorced">Divorced</string>
    <string name="union">In a civil union</string>
    <string name="profile">Profile</string>
    <string name="chooseItem">Choose Item</string>
    <string name="inanOpenRelationship">In an Open Relationship</string>
    <string name="singUp">Sign up</string>
    <string name="checkedYouOut">Checked You Out</string>
    <string name="listView">Listview</string>
    <string name="grird">Grirdview</string>
    <string name="randomChat">Random chat</string>
    <string name="addFriend">Add Friend</string>
    <string name="deleteHistory">Delete History</string>
    <string name="login">Login</string>
    <string name="aution">Aution</string>
    <string name="fariusme">Fariusme</string>
    <string name="confgurationNotifice">Congratulation, you have reached to 1 st position of Auction</string>
    <string name="s19">19s</string>
    <string name="giveGift">Give Gift</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="birthday">BirthDay</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="both">both</string>
    <string name="emailNotEmpty">Email not empty</string>
    <string name="passwordNotEmpty">Password not empty</string>
    <string name="loading">Loading</string>
    <string name="WRONG_DATA_FORMAT">WRONG_DATA_FORMAT</string>
    <string name="EMAIL_NOT_FOUND">EMAIL_NOT_FOUND</string>
    <string name="INCORRECT_PASSWORD">INCORRECT_PASSWORD</string>
    <string name="LOCKED_USER">LOCKED _USER</string>
    <string name="LoginSuccessfully">Login Successfully</string>
    <string name="INVALID_EMAIL">INVALID_EMAIL</string>
    <string name="EMAIL_REGISTERED">EMAIL_REGISTERED</string>
    <string name="INVALID_USER_NAME">INVALID_USER_NAME</string>
    <string name="INVALID_PASSWORD">INVALID_PASSWORD</string>
</resources>
